2014-05-04  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/t/apropos-index.sh: New test.

2014-05-03  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/indices.c (info_indices_of_file_buffer, do_info_index_search)
	(index_entry_exists, apropos_in_all_indices, info_index_apropos)
	(info_virtual_index)
	Call free instead of info_free_references or info_reference_free,
	because the REFERENCE * objects in the array are still referenced
	elsewhere.

	* info/info-utils.c (info_concatenate_references): Don't free arguments.
	Always return a new array, even if either of the arguments are null.
	Callers updated.

	* info/indices.c (info_apropos): Merged into info.c:main.
	(APROPOS_NONE) Moved to indices.h.
	* info/info.c <apropos in indices>: Call apropos_in_all_indices
	only after infopath_init has been called.

	* info/indices.c (apropos_in_all_indices): Get file buffer directly,
	rather than loading a node first.

	* info/man.c (manpage_xrefs_in_binding): Delete unused.

2014-05-03  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/window.c (string_to_node): Function deleted.  Caller in
	create_internal_info_help_node updated.

	* info/window.c, info/man.c (clean_manpage): Function moved.
	* info/window.c, info/info-utils.c (ansi_escape): Function moved.

	* info/info-utils.c (info_get_menu_entry_by_label): Arguments
	changed.
	* info/session.c (entry_in_menu): Arguments changed.

2014-05-02  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info.c (all_files): Get working again, having been broken
	by recent changes to startup.  Don't use info_follow_menus.

	* info/indices.c (allfiles_node): Declared global.
	(allfiles_create_node) Moved to info.c

	* info/info.c (node_file_name): Argument dirok deleted.
	(allfiles_create_node): Don't use numbers as labels of menu entries.
	Don't create a containing FILE_BUFFER for allfiles_node.
	(info_find_matching_files): Use add_pointer_to_array to build up
	list.  Check for man pages directly (previously this was done in